--- a/src/app/modules/student/searchstudent/searchstudent.component.html
+++ b/src/app/modules/student/searchstudent/searchstudent.component.html
@@ -24,14 +24,19 @@
                 </mat-select>
             </mat-form-field>
             <mat-form-field appearance="outline" style="width: 150px;">
-                <mat-label>Remarks</mat-label>
-                    <mat-select formControlName="searchRemarkId">
+                <mat-label>search</mat-label>
+                <mat-select formControlName="searchRemarkId">
                     <mat-option value="0">select</mat-option>
-                    <mat-option *ngFor="let item of Remarks" [value]="item.MasterDataId">
+                    <mat-optgroup *ngFor="let item of Groups" [label]="item.name" [disabled]="item.disabled">
+                        <mat-option *ngFor="let list of item.group" [value]="list.MasterDataId">
+                            {{list.MasterDataName}}
+                        </mat-option>
+                    </mat-optgroup>
+                    <!-- <mat-option *ngFor="let item of Groups" [value]="item.MasterDataId">
                         {{item.MasterDataName}}
-                    </mat-option>
+                    </mat-option> -->
                 </mat-select>
-            </mat-form-field>            
+            </mat-form-field>
             <mat-form-field appearance="outline" style="width: 150px;">
                 <mat-label>Admission No.</mat-label>
                 <input formControlName="searchAdmissionNo" autocomplete="Off" matInput [maxlength]="10">
@@ -157,7 +162,8 @@
                     [ngClass]="{ 'highlight': row.Remarks.toLowerCase() == 'orphan' }">
                 </mat-row>
             </mat-table>
-            <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[10,25,50]"></mat-paginator>
+            <mat-paginator style="display: flex;justify-content: center;" [pageSizeOptions]="[10,25,50]">
+            </mat-paginator>
         </div>
     </mat-card-content>
     <!-- <mat-card-actions fxLayoutAlign="center center">
