--- a/src/assets/print.scss
+++ b/src/assets/print.scss
@@ -7,18 +7,17 @@
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap';
 
+mat-form-field,
+button {
+	margin-right: 15px;
+}
+
 mat-table {
-	margin-bottom: 0px;
-	margin-left  : 0px;
-	width        : 100%;
-	//	box-sizing: border-box;
+	width:100%;
+	padding: 0px;
+	margin : 0px;
 }
 
-mat-cell,
-mat-header-cell {
-
-	border-right: 1px solid lightgray;
-}
 
 .header {
 	width    : 100%;
@@ -30,28 +29,64 @@ mat-header-cell {
 	width          : 100%;
 	display        : flex;
 	justify-content: space-between;
-	text-align     : center;
-	margin         : 0px;
+	text-align     : center
 }
 
 span {
 	width: 100%;
 }
+div{
+//	width:100%;
+justify-content: center;
+	white-space: nowrap;
+}
 
 .blank {
+	//max-width: 100%;
 	display        : flex;
 	justify-content: center;
 	font-weight    : bold;
-	flex           : 1 1 300px;
+	flex           : 1 0 100%;
 	border-bottom  : 1px solid lightgray;
 	margin-bottom  : 15px
 }
+.contentwrapper {
+	//justify-content: center;
+	display       : flex;
+	flex-direction: column;
+	padding    : 2.5cm;
+	//margin-bottom : 1in;
+	//width         : max-content;
+}
+.footerwrapper{
+	width:100%;
+	margin-top:2cm;
+	//margin-bottom: 2cm;
+}
+.element-row {
+	justify-content:space-between;
+	width              : 5in;
+	border-bottom-style: none;
+	min-height         : 0px;
+	//padding-left : 100px;
+	//padding-right: 100px;
+}
+
+.border {
+	//box-sizing: border-box;
+	font-size  : 14px;
+	display    : grid;
+	place-items: center;
+	min-height : 200px;
+	border     : 8px solid;
+	padding    : 1cm;
+	width: 17.5cm;
+	height: 12cm;
+}
 
 .headpad {
-	letter-spacing: 15px;
-	padding       : 30px 0px 15px 0px;
-	font-size     : 35pt;
-	font-weight   : bolder;
+	padding  : 30px 0px 15px 0px;
+	font-size: 30pt
 }
 
 .txtalign {
@@ -64,53 +99,20 @@ span {
 	text-align: center
 }
 
-div {
-	margin-bottom: 8px;
-}
-
 .red {
 	color      : red;
 	font-weight: bold
 }
 
 .cerhead {
-
 	font-size: 30px;
-	padding  : 30px 0px 30px 0px;
+	padding  : 50px 0px 50px 0px;
 }
 
 .CertificateFont {
 	font-family: "Ewert", cursive;
-}
-
-.contentwrapper {
-	display        : flex;
-	justify-content: center;
-	flex-direction : column;
-	margin-top     : 20px;
-	margin-bottom  : 20px;
-	width          : 100%;
-
-}
-
-.element-row {
-	width              : 90%;
-	border-bottom-style: none;
-	min-height         : 0px;
-	//padding-left : 100px;
-	//padding-right: 100px;
-}
-
-
-.border {
-	margin-left  : 0rem;
-	//font-size  : 1.6rem;
-	display      : grid;
-	place-items  : center;
-	min-height   : 200px;
-	border       : 8px solid;
-	//padding    : 1rem;
-	width        : 100vw;
+	margin-top: 2cm;
+	margin-bottom: 2cm;
 }
 
 
